--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<h1>Code Pipeline Demo</h1>
+<div th:replace="fragments/header"/>
 
-<p>This is the demostration
-    to test Code Pipeline
+<h2>Professional Overview</h2>
+<p>HI! I am AWS Developer.
+    I am a quick learner, with excellent problem-solving skills and the ability to work collaboratively with cross-functional teams, to deliver high-quality cloud solutions that meet or exceed client expectations.As a Cloud Developer AWS , my objective is to build a successful career in the cloud computing industry by utilizing my technical skills and knowledge of AWS to develop and deploy secure, scalable and cost-effective cloud solutions.
+</p>
 
 </body>
 </html>
