--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Bhuvaneshwari Palaniappan Portfolio</title>
+
+  <div class="right">
+  <link rel="stylesheet" th:href="'/style.css?v=' + ${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:MM')}">
+
+  </div>
+  <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
 </head>
 <body>
-<header><img src="/logo.png" alt="My Logo">
+<header>
+  <img src="/logo.png" alt="My Logo">
 <nav>
   <a href="/">Home</a>
   <a href="/Projects">Projects</a>
@@ -15,6 +21,8 @@
 </header>
 
 <h1>Bhuvaneshwari Palaniappan</h1>
+
+
 
 </body>
 </html>
