--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-  <img src="/logo.png" alt="My Logo">
+  <img src="/logo.png" alt="My Logo" id="logo">
 <nav>
   <a href="/">Home</a>
   <a href="/Projects">Projects</a>
