--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <title>Bhuvaneshwari Palaniappan Portfolio</title>
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
 
   <link rel="stylesheet" th:href="'/style.css?v=' + ${#dates.format(#dates.createNow(), 'yyMMddHHmm')}">
 
-
-  <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
 </head>
 <body>
 <header>
