--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,7 @@
 <div th:replace="fragments/header"/>
 
+<img src="/MyPhoto.jpg" alt="Bhuvana profile picture" id="profile-picture">
+
 <h2>Professional Overview</h2>
 <p>HI! I am AWS Developer.
     I am a quick learner, with excellent problem-solving skills and the ability to work collaboratively with cross-functional teams, to deliver high-quality cloud solutions that meet or exceed client expectations.As a Cloud Developer AWS , my objective is to build a successful career in the cloud computing industry by utilizing my technical skills and knowledge of AWS to develop and deploy secure, scalable and cost-effective cloud solutions.
