--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -1,10 +1,20 @@
 <div th:replace="fragments/header" />
 
 <h2>Contact Information</h2>
-<ul>
-  <li><strong>Email:</strong> bhuvi.pavi@gmail.com</li>
-  <li><strong>Phone:</strong> 076-323 74 94</li>
-  <li><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/liru">www.linkedin.com/in/liru</a></li>
+<p>Stay In Touch!!!</p>
+<ul class="contact-information">
+  <li>
+    <span class="material-icons">contact_mail</span>
+    <strong>Email-</strong> bhuvi.pavi@gmail.com
+  </li>
+  <li>
+    <span class="material-icons">smartphone</span>
+    <strong>Phone-</strong> +46 769538816
+  </li>
+  <li>
+    <img src="/linkedInlogo.webp" alt="LinkedIn logo" id="linkedIn-logo">
+    <strong>LinkedIn-</strong> <a href="https://www.linkedin.com/in/bhuvana-palaniappan" target="_blank">linkedin.com/in/bhuvana-palaniappan</a>
+  </li>
 </ul>
 
 <h2>Location:</h2>
