--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -17,8 +17,10 @@
   </li>
 </ul>
 
-<h2>Location:</h2>
-<p>Jönköping, Jonkoping County, Sweden</p>
+<h2>Location</h2>
+<span class="material-icons">location_on</span>
+<strong>Home-</strong> Göteborg , Sweden
+
 
 </body>
 </html>
