--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -3,23 +3,29 @@
 <h2>Contact Information</h2>
 <p>Stay In Touch!!!</p>
 <ul class="contact-information">
+
   <li>
-    <span class="material-icons">contact_mail</span>
+    <span class="material-icons contact-icon">contact_mail</span>
     <strong>Email-</strong> bhuvi.pavi@gmail.com
   </li>
   <li>
-    <span class="material-icons">smartphone</span>
+    <span class="material-icons contact-icon">smartphone</span>
     <strong>Phone-</strong> +46 769538816
   </li>
   <li>
-    <img src="/linkedInlogo.webp" alt="LinkedIn logo" id="linkedIn-logo">
+    <img src="/linkedInlogo.webp" alt="LinkedIn logo" class="contact-icon">
     <strong>LinkedIn-</strong> <a href="https://www.linkedin.com/in/bhuvana-palaniappan" target="_blank">linkedin.com/in/bhuvana-palaniappan</a>
   </li>
+  <li>
+    <img src="/Github.png" alt="Github logo" class="contact-icon">
+    <strong>GitHub-</strong> <a href="https://github.com/BhuvanaPalani" target="_blank">github.com/BhuvanaPalani</a>
+  </li>
+
 </ul>
 
 <h2>Location</h2>
 <span class="material-icons">location_on</span>
-<strong>Home-</strong> Göteborg , Sweden
+<strong>Home-</strong> Göteborg-41870 , Sweden.
 
 
 </body>
