--- a/src/main/resources/templates/Projects.html
+++ b/src/main/resources/templates/Projects.html
@@ -8,28 +8,35 @@
 <p>I created a project by opening the Jakarta EE JSP application to manage projects hosted on GitHub.
     This project is created in Spring Boot for creating, reading lists, update and delete person and projects using CRUD function.
 </p>
-
 <p>
-    <a href="https://github.com/BhuvanaPalani/Person-Details" target="_blank">Link to github</a>
+    <a href="https://github.com/BhuvanaPalani/Person-Details" target="_blank">Link to the gitHub project</a>
 </p>
 
 <h3>Employees Project Details</h3>
 <p>I worked under how to use Spring and Spring Boot , GitHub and Versioning.
     I learnt systematic application development, basic API development using GET, POST, PUT and DELETE request with the Spring framework.
 </p>
-
 <p>
-    <a href="https://github.com/BhuvanaPalani/EmployeeProjectBhuvana" target="_blank">Link to github</a>
+    <a href="https://github.com/BhuvanaPalani/EmployeeProjectBhuvana" target="_blank">Link to the gitHub project</a>
 </p>
 
 <h3>Cognito Project</h3>
 <p>I created where a user can register, login ,logout and delete their accounts
     connecting with AWS cognito using Spring Boot Framework.
 </p>
+<p>
+    <a href="https://github.com/BhuvanaPalani/Bhuvana-cognito-project" target="_blank">Link to the gitHub project</a>
+</p>
+
+<h3>Library Management System</h3>
+<p>This project is about creating online library home page where
+    the admin and user can log in ,update and loan books using OOP with Java Language.
+</p>
 
 <p>
-    <a href="https://github.com/BhuvanaPalani/Bhuvana-cognito-project" target="_blank">Link to github</a>
+    <a href="https://github.com/BhuvanaPalani/Library-Management-System" target="_blank">Link to the gitHub project</a>
 </p>
+
 
 
 </body>
