--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,20 @@
 <div th:replace="fragments/header"/>
 
+<div class="photo-container">
 <img src="/MyPhoto.jpg" alt="Bhuvana profile picture" id="profile-picture">
+    <div class="button-container">
+<a href="/Resume.pdf" target="_blank" download="BhuvanaResume.pdf" class="download-button">Download Resume</a>
 
+
+<a href="/CoverLetter.pdf" download="BhuvanaCoverLetter.pdf" class="download-button">Download Cover Letter</a>
+    </div>
+</div>
 <h2>Professional Overview</h2>
 <p>HI! I am AWS Developer.
-    I am a quick learner, with excellent problem-solving skills and the ability to work collaboratively with cross-functional teams, to deliver high-quality cloud solutions that meet or exceed client expectations.As a Cloud Developer AWS , my objective is to build a successful career in the cloud computing industry by utilizing my technical skills and knowledge of AWS to develop and deploy secure, scalable and cost-effective cloud solutions.
+    As an AWS Developer, I am driven by a passion for cloud computing and a commitment to excellence.
+    My agile learning style, coupled with strong problem-solving abilities, allows me to thrive in dynamic environments.
+    I excel in collaborating with diverse, cross-functional teams to craft and deliver cutting-edge cloud solutions that consistently exceed client expectations.
+    Leveraging my comprehensive technical skills and deep knowledge of AWS, I aim to design, develop, and deploy secure, scalable, and cost-effective cloud solutions.
 </p>
 
 </body>
