--- a/src/main/resources/templates/Projects.html
+++ b/src/main/resources/templates/Projects.html
@@ -1,4 +1,4 @@
-<div th:replace="fragments/header"/>
+<div th:replace="fragments/header" />
 
 <h2>My Projects</h2>
 <p>These are few projects I did during the Course.
@@ -32,12 +32,53 @@
 <p>This project is about creating online library home page where
     the admin and user can log in ,update and loan books using OOP with Java Language.
 </p>
-
 <p>
     <a href="https://github.com/BhuvanaPalani/Library-Management-System" target="_blank">Link to the gitHub project</a>
 </p>
 
+<h3>Bank Application And Testing</h3>
+<p>This project is created on the basis of different classes like bank, customer, ATM
+    and testing the program in LogIn, CheckAccountBalance, DepositMoney and WithdrawMoney functions
+    using OOP with Java.
+</p>
+<p>
+    <a href="https://github.com/BhuvanaPalani/Bank-Application-Testing" target="_blank">Link to the gitHub project</a>
+</p>
 
+<h3>Clean Code Project</h3>
+<p>A set of codes was given and we have to remove the unnecessary code , classes,
+    changed the words in proper and simplified format using OOP with Java.
+</p>
+<p>
+    <a href="https://github.com/BhuvanaPalani/Cleaned-Code-Project" target="_blank">Link to the gitHub project</a>
+</p>
+
+<h3>ToDo Scrum Project</h3>
+<p>It is a group project where each one was assigned to work on different field.
+    I was assigned to do front end. We updated everything in Trello and each
+    individual made a document about their own work.
+</p>
+<p>
+    <a href="https://github.com/BhuvanaPalani/ToDo-Scrum-Project" target="_blank">Link to the gitHub project</a>
+</p>
+
+<h3>Advertisment Web Application</h3>
+<p>In this project, I created listings of some images where we can edit and delete, created some services in AWS
+    console and connected Ubuntu Java and finally brought the output in the web browser.
+</p>
+<p>
+    <a href="https://github.com/BhuvanaPalani/Advertisment-Web-Application" target="_blank">Link to the gitHub project</a>
+</p>
+
+<h3>Mobile Repair Center</h3>
+<p>I created a database where we can register customer's mobile
+    repair problem using MySQL Workbench and Diagram.net.
+<p>
+    <a href="https://github.com/BhuvanaPalani/Mobile-Repair-Center" target="_blank">Link to the gitHub project</a>
+</p>
 
 </body>
 </html>
+
+
+
