--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,15 +16,15 @@
   <img src="/logo.png" alt="My Logo" id="logo">
 
 <nav>
-  <a href="/">Home</a>
+  <a href="/">About</a>
   <a href="/Projects">Projects</a>
+  <a href="/Skills">Skills</a>
   <a href="/Contact">Contact</a>
+
 </nav>
 </header>
 
 <h1>Bhuvaneshwari Palaniappan - Portfolio</h1>
-
-
 
 </body>
 </html>
