--- a/src/main/resources/templates/Skills.html
+++ b/src/main/resources/templates/Skills.html
@@ -8,8 +8,38 @@
     <li>Adept at managing data with SQL databases.</li>
     <li>Knowledgeable in cloud fundamentals and security practices.</li>
 </ul>
-</div>
+
+<h2>Languages</h2>
+<ul class="languages-list">
+    <li>
+        <strong>English-</strong> Full Professional Proficiency
+    </li>
+    <li>
+        <strong>Swedish-</strong> Minimum Professional Proficiency
+    </li>
+    <li>
+        <strong>Tamil-</strong> Native Proficiency
+    </li>
 </ul>
+
+<h2>Education</h2>
+<ol>
+    <li>
+        <strong>Jensen Yrkehögsskolan (2022 - 2024)</strong>
+        <ul>
+            <li>Specialization- Cloud Developer AWS</li>
+        </ul>
+    </li>
+    <li>
+        <strong>Kalasalingam University, India (2008 - 2012)</strong>
+        <ul>
+            <li>Degree- Bachelor's in Electronic And Communication Engineering</li>
+        </ul>
+    </li>
+
+</ol>
+</div>
+
 
 </body>
 </html>
