--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,11 +10,12 @@
     </div>
 </div>
 <h2>Professional Overview</h2>
-<p>HI! I am AWS Developer.
+<p>HI! I am AWS  Cloud Developer.
     As an AWS Developer, I am driven by a passion for cloud computing and a commitment to excellence.
     My agile learning style, coupled with strong problem-solving abilities, allows me to thrive in dynamic environments.
     I excel in collaborating with diverse, cross-functional teams to craft and deliver cutting-edge cloud solutions that consistently exceed client expectations.
     Leveraging my comprehensive technical skills and deep knowledge of AWS, I aim to design, develop, and deploy secure, scalable, and cost-effective cloud solutions.
+
 </p>
 
 </body>
