--- a/src/main/resources/templates/Projects.html
+++ b/src/main/resources/templates/Projects.html
@@ -73,8 +73,20 @@
 <h3>Mobile Repair Center</h3>
 <p>I created a database where we can register customer's mobile
     repair problem using MySQL Workbench and Diagram.net.
+</p>
 <p>
     <a href="https://github.com/BhuvanaPalani/Mobile-Repair-Center" target="_blank">Link to the gitHub project</a>
+</p>
+<h3>Fashion Company Advertisment</h3>
+<p>I created an ad page for a sample fashion company using HTML,
+    CSS and view the page in mobile friendly.
+<p>
+    <a href="https://github.com/BhuvanaPalani/Front-End-WebPage" target="_blank">Link to the gitHub project</a>
+</p>
+<h3>Food Recipe App</h3>
+<p>I created a page with list of food and its recipe and video of making it using HTML, CSS, JavaScript and React
+<p>
+    <a href="https://github.com/BhuvanaPalani/Bhuvana-Recipe-React" target="_blank">Link to the gitHub project</a>
 </p>
 
 </body>
